--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -6,7 +6,8 @@
   </div>
   <div class="top-actions">
     <button mat-raised-button color="primary" (click)="onOpenDialog()">
-      <mat-icon fontIcon="system_update"></mat-icon>Google Sheetsをインポート
+      <mat-icon fontIcon="system_update"></mat-icon>Google
+      スプレッドシートをインポート
     </button>
     <a
       href="https://cedar-impatiens-49c.notion.site/Moment-9d9e6093566a4f02a78004ac048b27b5"
@@ -21,19 +22,21 @@
 </section>
 <section class="tutorial">
   <mat-card class="card">
-    <div class="card-title">①Google Sheetsで英文をまとめる</div>
+    <div class="card-title">①Google スプレッドシートで英文をまとめる</div>
     <img
       class="card-icon"
       src="assets/tutorial/edit.png"
-      alt="Google Sheetsを作成する"
+      alt="Google スプレッドシートを作成する"
     />
   </mat-card>
   <mat-card class="card">
-    <div class="card-title">②MomentにGoogle Sheetsをインポートする</div>
+    <div class="card-title">
+      ②MomentにGoogle スプレッドシートをインポートする
+    </div>
     <img
       class="card-icon"
       src="assets/tutorial/download.png"
-      alt="MomentにGoogle Sheetsをインポートする"
+      alt="MomentにGoogle スプレッドシートをインポートする"
     />
   </mat-card>
   <mat-card class="card">
