--- a/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
+++ b/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
@@ -13,7 +13,7 @@
         [href]="'https://docs.google.com/spreadsheets/d/' + data.sheetId"
         target="_blank"
         class="sheet-button"
-        alt="Google Sheets"
+        alt="Google スプレッドシート"
       >
         <mat-icon fontIcon="open_in_new"></mat-icon>
         {{ data.title }}の{{ data.sheetName }}にアクセスする
