--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
@@ -3,7 +3,7 @@
     <div class="keen-slider" #sliderRef>
       <mat-card
         class="word-viewer keen-slider__slide"
-        *ngFor="let index of [0, 1, 2]"
+        *ngFor="let index of [0, 1]"
       >
         <ng-container
           *ngIf="isLoaded && indexes.length > 0 && sentenses.length > 0"
