--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
@@ -6,67 +6,6 @@
   grid-template-rows: 1fr 8rem;
   height: 100%;
 }
-.keen-slider {
-  width: 100%;
-  height: 100%;
-}
-.word-viewer {
-  min-width: calc(100% - 2rem);
-  height: calc(100% - 1rem);
-  overflow: hidden;
-  display: grid;
-  row-gap: 1.2rem;
-  grid-template-rows: repeat(3, 1fr);
-  padding: 8px;
-}
-.card-content {
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-.hide-target {
-  position: relative;
-  .hide-target-text {
-    margin: 1rem 0;
-  }
-  .hide {
-    font-size: 1.2rem;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0rem;
-    left: 0;
-    right: 0;
-    background-color: lightgray;
-    border-radius: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    color: #fff;
-    cursor: pointer;
-  }
-}
-
-.note {
-  border: 0.125rem solid #edeff4;
-  border-radius: 0.5rem;
-  padding: 0.6rem;
-  word-break: keep-all;
-}
-.note-title {
-  color: lightgray;
-  font-weight: bold;
-  height: 1rem;
-}
-.note-body {
-  word-break: break-word;
-  white-space: pre-wrap;
-  max-height: calc(100% - 1rem);
-  height: calc(100% - 1rem);
-  overflow-y: scroll;
-}
 
 .action-buttons {
   display: flex;
@@ -76,11 +15,6 @@
   padding: 0 16px;
 }
 
-.action-buttons-item {
-  button {
-    margin: 0 0.6rem;
-  }
-}
 .not-exist {
   @include variable.not-exist;
 }
@@ -89,4 +23,22 @@
 }
 .not-exist-content {
   @include variable.not-exist-content;
+}
+
+.cards {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.card-finish {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 1rem);
+  font-weight: bold;
+  font-size: 2rem;
+  color: gray;
+  width: 100%;
+  position: absolute;
 }
